profiling-using-exp-runner/backup_FINAL_RESULTS/pca_experiment/run_3_repetition_0/energibridge.log
sampling interval: 200, target function: pca, input size: 1000
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.pca as module; X = np.random.rand(1000,1000); X_tuple = tuple(map(tuple, X)); module.pca(X_tuple, 10); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.711184173583985 for 0.22856323 sec of execution.
